# tracking-challenge-utils

./: README.md  pyproject.toml
docs/: metrics.md
examples/: basic.py  naive_tracking.py
src/tracking_challenge_utils/: io.py  metrics.py
src/tracking_challenge_utils/_test/: test_metrics.py
