[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracking-challenge-utils"
version = "0.1.0"
description = "Utilities for the whole embryo tracking challenge"
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
dependencies = [
    "napari[pyqt5]>=0.6.4",
    "spatial-graph>=0.0.5",
    "tracksdata>=0.1.0rc0",
    "zarr>=3.0.10",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

# https://docs.astral.sh/ruff
[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 120

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
ignore = ["E712"]
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TID",  # flake8-tidy-imports
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false # default is false
